CSS-100 - QualifiedParameter's toString() method implemented