@@ -31,18 +31,22 @@ public class QualifiedParameterTest {
 		ParameterValue pv;
 		pv = new ParameterValue(ParameterType.BOOLEAN);
 		pv.getBoolParameterValues().add(Boolean.TRUE);
+		pv.getBoolParameterValues().add(Boolean.FALSE);
 		pvList.add(pv);
 		pv = new ParameterValue(ParameterType.CHARACTER_STRING);
-		pv.getStringParameterValues().add("CHARACTER_STRING");
+		pv.getStringParameterValues().add("string1");
+		pv.getStringParameterValues().add("string2");
 		pvList.add(pv);
 		pv = new ParameterValue(ParameterType.DURATION);
 		pv.getDurationParameterValues().add(Duration.of(DurationType.SECONDS, java.time.Duration.ZERO));
+		pv.getDurationParameterValues().add(Duration.of(DurationType.MILLISECONDS, java.time.Duration.ZERO));
 		pvList.add(pv);
 		pv = new ParameterValue(ParameterType.ENUMERATED);
-		pv.getIntegerParameterValues().add(new Long(1));
+		pv.getIntegerParameterValues().add(Long.valueOf(1));
+		pv.getIntegerParameterValues().add(Long.valueOf(10));
 		pvList.add(pv);
 		pv = new ParameterValue(ParameterType.INTEGER);
-		pv.getIntegerParameterValues().add(new Long(2));
+		pv.getIntegerParameterValues().add(Long.valueOf(2));
 		pvList.add(pv);
 		pv = new ParameterValue(ParameterType.OBJECT_IDENTIFIER);
 		pv.getOIDparameterValues().add(ObjectIdentifier.of(1,3,112,4,4,1,2));
@@ -51,19 +55,20 @@ public class QualifiedParameterTest {
 		pv.getOctetStringParameterValues().add(new byte[] {1,2,3});
 		pvList.add(pv);
 		pv = new ParameterValue(ParameterType.POSITIVE_INTEGER);
-		pv.getIntegerParameterValues().add(new Long(3));
+		pv.getIntegerParameterValues().add(Long.valueOf(3));
+		pv.getIntegerParameterValues().add(Long.valueOf(5));
 		pvList.add(pv);
 		pv = new ParameterValue(ParameterType.PUBLISHED_IDENTIFIER);
 		pv.getOIDparameterValues().add(ObjectIdentifier.of(1,3,112,4,4,1,3));
 		pvList.add(pv);
 		pv = new ParameterValue(ParameterType.REAL);
-		pv.getRealParameterValues().add(new Double(4.0));
+		pv.getRealParameterValues().add(Double.valueOf(4.0));
 		pvList.add(pv);
 		pv = new ParameterValue(ParameterType.TIME);
 		pv.getTimeParameterValues().add(Time.of(new byte[] {0,1,2,3,4,5,6,7}));
 		pvList.add(pv);
 		pv = new ParameterValue(ParameterType.UNSIGNED_INTEGER);
-		pv.getIntegerParameterValues().add(new Long(5));
+		pv.getIntegerParameterValues().add(Long.valueOf(5));
 		pvList.add(pv);
 		
 		int hash = qp.hashCode();
@@ -80,18 +85,22 @@ public class QualifiedParameterTest {
 		ParameterValue pv1;
 		pv1 = new ParameterValue(ParameterType.BOOLEAN);
 		pv1.getBoolParameterValues().add(Boolean.TRUE);
+		pv1.getBoolParameterValues().add(Boolean.FALSE);
 		pvList1.add(pv1);
 		pv1 = new ParameterValue(ParameterType.CHARACTER_STRING);
-		pv1.getStringParameterValues().add("CHARACTER_STRING");
+		pv1.getStringParameterValues().add("string1");
+		pv1.getStringParameterValues().add("string2");
 		pvList1.add(pv1);
 		pv1 = new ParameterValue(ParameterType.DURATION);
 		pv1.getDurationParameterValues().add(Duration.of(DurationType.SECONDS, java.time.Duration.ZERO));
+		pv1.getDurationParameterValues().add(Duration.of(DurationType.MILLISECONDS, java.time.Duration.ZERO));
 		pvList1.add(pv1);
 		pv1 = new ParameterValue(ParameterType.ENUMERATED);
-		pv1.getIntegerParameterValues().add(new Long(1));
+		pv1.getIntegerParameterValues().add(Long.valueOf(1));
+		pv1.getIntegerParameterValues().add(Long.valueOf(10));
 		pvList1.add(pv1);
 		pv1 = new ParameterValue(ParameterType.INTEGER);
-		pv1.getIntegerParameterValues().add(new Long(2));
+		pv1.getIntegerParameterValues().add(Long.valueOf(2));
 		pvList1.add(pv1);
 		pv1 = new ParameterValue(ParameterType.OBJECT_IDENTIFIER);
 		pv1.getOIDparameterValues().add(ObjectIdentifier.of(1,3,112,4,4,1,2));
@@ -100,19 +109,20 @@ public class QualifiedParameterTest {
 		pv1.getOctetStringParameterValues().add(new byte[] {1,2,3});
 		pvList1.add(pv1);
 		pv1 = new ParameterValue(ParameterType.POSITIVE_INTEGER);
-		pv1.getIntegerParameterValues().add(new Long(3));
+		pv1.getIntegerParameterValues().add(Long.valueOf(3));
+		pv1.getIntegerParameterValues().add(Long.valueOf(5));
 		pvList1.add(pv1);
 		pv1 = new ParameterValue(ParameterType.PUBLISHED_IDENTIFIER);
 		pv1.getOIDparameterValues().add(ObjectIdentifier.of(1,3,112,4,4,1,3));
 		pvList1.add(pv1);
 		pv1 = new ParameterValue(ParameterType.REAL);
-		pv1.getRealParameterValues().add(new Double(4.0));
+		pv1.getRealParameterValues().add(Double.valueOf(4.0));
 		pvList1.add(pv1);
 		pv1 = new ParameterValue(ParameterType.TIME);
 		pv1.getTimeParameterValues().add(Time.of(new byte[] {0,1,2,3,4,5,6,7}));
 		pvList1.add(pv1);
 		pv1 = new ParameterValue(ParameterType.UNSIGNED_INTEGER);
-		pv1.getIntegerParameterValues().add(new Long(5));
+		pv1.getIntegerParameterValues().add(Long.valueOf(5));
 		pvList1.add(pv1);
 		
 		int hash1 = qp1.hashCode();
@@ -132,7 +142,6 @@ public class QualifiedParameterTest {
 		
 		Assert.assertFalse(qp.equals(qp2));
 		Assert.assertFalse(hash == hash2);
-
 	}
 
 }
